# aget

./: Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: destroy.rs  mod.rs  open.rs  seal.rs  secure_delete.rs  status.rs
yazi/: keymap.toml  theme.toml
yazi/aget.yazi/: init.lua  main.lua
