[package]
name = "aget"
version = "0.2.0"
edition = "2021"
description = "Secure file encryption and destruction tool powered by age"
license = "MIT"
repository = "https://github.com/seymer/aget"
keywords = ["encryption", "age", "secure-delete", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
age = { version = "0.10", features = ["armor"] }
clap = { version = "4.5", features = ["derive"] }
secrecy = "0.8"
tempfile = "3.14"
walkdir = "2.5"
anyhow = "1.0"
rand = "0.8"
